--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamster Kombat Copy</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hamster Kombat Copy</h1>
+    <div class="container">
+        <div class="count">
+            <div class="count__img">
+                <img src="img/hamster-coin.png" alt="">
+            </div>
+            <div class="count__txt">1000</div>
+        </div>
+        <div class="button">
+            <div class="button__img">
+                <img src="img/hamster.jpg" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
